--- a/sources/neb2amqp/README
+++ b/sources/neb2amqp/README
@@ -20,3 +20,10 @@ TODO
 - Add 'ip_address' field
 - Cleanup the code
 - Fix memory leaks
+- building routing-key
+  (<connector>.<connector_name>.<event_type>.<source_type>.<component>[.<resource>])
+
+Host:
+nagios.Central.check.component.localhost3
+Service:
+nagios.Central.check.resource.localhost3.PING
